css/groove_writer_orange.css
/* ... */
	.kick-container {
		border: 1px solid transparent;
		height: 84px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.staff-line-1{
		position: absolute; top: 46px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-2{
		position: absolute; top: 76px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-3{
		position: absolute; top: 107px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-4{
		position: absolute; top: 136px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-5{
		position: absolute; top: 167px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.sticking {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
		margin-bottom: -1;
		}
	.hi-hat {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.snare {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.kick {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.note_part {  /* all the following note segments also share class .note_part */
	}
	.sticking_right {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.sticking_left {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.hh_crash {
		position: absolute; top: 21px; left: 2px;
		font-size: 22px;
		color: transparent;
		cursor: pointer;
	}
	.hh_ride {
		position: absolute; top: 17px; left: 5px;
		font-size: 26px;
		color: transparent;
		cursor: pointer;
	}
	.hh_cross {
		position: absolute; top: 20px; left: 3px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.hh_open {
		position: absolute; top: 7px; left: 7px;
		font-size: 13px;
		color: transparent;
	}
	.hh_close {
		position: absolute; top: 7px; left: 7px;
		font-size: 13px;
		color: transparent;
		float:left;
	}
	.hh_accent {
		position: absolute; top: 2px; left: 9px;
		font-size: 20px;
		color: transparent;
		float:left;
	}
	.dot_in_snare_ghost_note {
		font-size: 14px;
		position: relative; top: -1px; left: 0px;
	}
	.snare_ghost {
		position: absolute; top: 25px; left: 1px;
		font-size: 26px;
		color: transparent;
		cursor: pointer;
	}
	.snare_circle {
		position: absolute; top: 29px; left: 2px;
		width:90%;
		height:22px;
		width: 22px;
		background: #FFF;
		border: 2px solid;
		border-color: #999;
		border-radius: 30px;
		cursor: pointer;
	}
	.snare_xstick {
		position: absolute; top: 26px; left: 3px;
		font-size: 30px;
		color: transparent;
		cursor: pointer;
	}
	.snare_flam {
		position: absolute; top: 29px; left: -3px;
		font-size: 25px;
		color: transparent;
		cursor: pointer;
	}
	.snare_accent {
		position: absolute; top: 0px; left: 10px;
		font-size: 26px;
		color: transparent;
	}
	.kick_circle {
		position: absolute; top: 29px; left: 2px;
		height: 22px;
		width: 22px;
		background: #FFF;
		border: 2px solid #999;
		border-radius: 40px 40px 40px 40px;
		cursor: pointer;
	}
	
	.kick_splash {
		position: absolute; top: 55px; left: 3px;
		font-size: 30px;
		color: transparent;
		cursor: pointer;
	}
	.opening_note_space {
		display: inline-block;
		width:1px;
		height:1px;
		background: transparent;
	}
	.end_note_space {
		display: inline-block;
		width:1px;
		height:1px;
		background: transparent;
	}
	.space_between_note_groups {
		display: inline-block;
		width:20px;
		height:1px;
		background: transparent;
	}
	#addMeasureButton {
		vertical-align: top;
		display: inline-block;
		color: #E79700;
		cursor: pointer;
		font-size: 40px;
		padding-top: 2px;
		margin-top: 73px;		
	}
	
	.closeMeasureButton {
		vertical-align: top;
		display: inline-block;
		margin-top: 3px;
		cursor: pointer;
		color: #E79700;
	}
	.closeMeasureButton:hover, #addMeasureButton:hover {
		color: #000;
	}
	#PermutationOptions.displayed {
		margin: 3px 0px -20px 10px;
	}
	#PermutationOptionsHeader {
		/margin-left: 22px;
		font-size: 18px;
		font-weight:bold;
	}
	.PermutationOptionWrapper {
		display: table;
		border-collapse: collapse;
	}
	.PermutationOptionGroup{
		display: table-row;
		border-bottom: 1px solid #999;
	}
	.PermutationOptionGroup:last-child{
		border-bottom: 0px solid #999;
	}
	.PermutationOption{
		height: 20px;
		display: table-cell;
		padding-right: 15px;
		/border-top: 1px solid #999;
		/border-bottom: 1px solid #999;
	}
	.PermutationSubOption{
		display: table-cell;
		padding-right: 15px;
		/border-top: 1px solid #999;
		/border-bottom: 1px solid #999;
	}
	#permutationType {
		margin-top: 10px;
	}
	#noteInstructions {
		font-size: 120%;
		font-weight: bold;
		margin-top: 14px;
		margin-left: 25px;
	}
	#exportMidi {
	}
	#ABC_Results {
		display: none;
	}
	#sheetMusicDiv {
		text-align: center;
		background: #FFF;
	}
	.svgTarget {
		background: #FFF;
		margin-left: auto;
		margin-right: auto;
	}
	#sheetMusicTextFields {
		border-top: 1px solid #999;
		padding: 8px 0px;
		text-align: center;
		-webkit-justify-content: space-around;
		display: -webkit-flex;
		display: flex;
		justify-content: space-around;
	}
	.sheetMusicTextField {
		margin: 0px 10px;
	}
	.sheetMusicInputField {
	
	}
	// Context Menu
	.noteContextMenu { 
		
	}
	#permutationContextMenu, #helpContextMenu, #metronomeOptionsContextMenu, #metronomeOptionsOffsetClickContextMenu {
		position: fixed;
		top: 0px;
		right: 0px;
	}
/* ... */

